--- a/templates/tradeoffs.mustache
+++ b/templates/tradeoffs.mustache
@@ -3,8 +3,8 @@
   <h4>Tradeoffs</h4>
 
 	<select class="chosen">
-		<label for="default-chosen-selection">Select a Set of Tradeoff Scores to View:</label></br>
-		<option class="default-chosen-selection"></option>
+		<label>Select a Set of Tradeoff Scores to View:</label></br>
+		<option class="default-chosen-selection" label="Preservation and Tourism"></option>
 		{{#tradeoffs}}
 			<option value="{{.}}">{{.}}</option>
 		{{/tradeoffs}}
