--- a/templates/habitats.mustache
+++ b/templates/habitats.mustache
@@ -1,5 +1,24 @@
 {{#isSketch}}
 <div class="reportSection tableContainer">
+    <h4>Endemic Species</h4>
+    <table>
+      <thead>
+        <tr>
+          <th>Species Type</th>
+          <th>Percent within Sketch</th>
+        </tr>
+      </thead>
+      <tbody>
+        {{#sketch_species}}
+          <tr>
+            <td>{{SPECIES}}</td>
+            <td>{{PERC}}</td>
+          </tr>
+        {{/sketch_species}}
+      </tbody>
+    </table>
+ </div>
+ <div class="reportSection tableContainer">
     <h4>Habitats</h4>
     <table>
       <thead>
@@ -15,20 +34,41 @@
             <td>{{PERC}}</td>
           </tr>
         {{/sketch_habitats}}
-        <tfoot>
-        <tr>
-          <td colspan="5" class="paragraph" style="text-align:left;">
-            <p style="margin-left:10px;">
-              
-            </p>
-          </td>
-        </tr>
-      </tfoot>
+      </tbody>
     </table>
  </div>
+
 {{/isSketch}}
 {{^isSketch}}
-<div class="reportSection tableContainer">
+  {{#hasIntangibleSpecies}}
+    <div class="reportSection tableContainer">
+      <h4>Endemic Species in Intangible Zones</h4>
+        <table>
+        <thead>
+          <tr>
+            <th>Species Type</th>
+            <th>Percent within Proposal</th>
+          </tr>
+        </thead>
+        <tbody>
+          {{#intangible_species}}
+            <tr>
+              <td>{{SPECIES}}</td>
+              <td>{{PERC}}</td>
+            </tr>
+          {{/intangible_species}}
+        </tbody>
+      </table>
+    </div>
+  {{/hasIntangibleSpecies}}
+  {{^hasIntangibleSpecies}}
+    <div class="reportSection">
+      <h4>Endemic Species in Intangible Zones</h4>
+      <p class="large">There are no intangible zones in this collection</p>
+    </div>
+  {{/hasIntangibleSpecies}}
+
+  <div class="reportSection tableContainer">
     <h4>Habitats</h4>
     {{#hasIntangibles}}
      <div class="list-header">The intangible zones within this proposal include the following habitats:</div>
@@ -36,7 +76,7 @@
       <thead>
         <tr>
           <th>Habitat</th>
-          <th>Percent within Sketch</th>
+          <th>Percent within Proposal</th>
         </tr>
       </thead>
       <tbody>
@@ -55,7 +95,7 @@
       <thead>
         <tr>
           <th>Habitat</th>
-          <th>Percent within Sketch</th>
+          <th>Percent within Proposal</th>
         </tr>
       </thead>
       <tbody>
@@ -74,7 +114,7 @@
       <thead>
         <tr>
           <th>Habitat</th>
-          <th>Percent within Sketch</th>
+          <th>Percent within Proposal</th>
         </tr>
       </thead>
       <tbody>
@@ -94,7 +134,7 @@
       <thead>
         <tr>
           <th>Habitat</th>
-          <th>Percent within Sketch</th>
+          <th>Percent within Proposal</th>
         </tr>
       </thead>
       <tbody>
