--- a/templates/tradeoffs.mustache
+++ b/templates/tradeoffs.mustache
@@ -4,7 +4,7 @@
 
 	<select class="chosen">
 		<label>Select a Set of Tradeoff Scores to View:</label></br>
-		<option class="default-chosen-selection" label="Preservation and Tourism"></option>
+		<option class="default-chosen-selection" label="Conservatión y Turismo"></option>
 		{{#tradeoffs}}
 			<option value="{{.}}">{{.}}</option>
 		{{/tradeoffs}}
