changed working en espanol

--- a/templates/habitats.mustache
+++ b/templates/habitats.mustache
@@ -71,7 +71,7 @@
   <div class="reportSection tableContainer">
     <h4>Hábitats</h4>
     {{#hasIntangibles}}
-     <div class="list-header">Las zonas de Intangible dentro de esta propuesta incluyen los siguientes hábitats:</div>
+     <div class="list-header">Las zonas Intangibles dentro de esta propuesta incluyen los siguientes hábitats:</div>
     <table>
       <thead>
         <tr>
