--- a/templates/tradeoffs.mustache
+++ b/templates/tradeoffs.mustache
@@ -10,7 +10,7 @@
 		{{/tradeoffs}}
 	</select>
      <p class="small ttip-tip">
-	   Tip: hover over a proposal to see details
+	   Sugerencia: Posicionar el cursor sobre una propuesta (el punto en la grafica) para ver detalles.
 	</p>
   	<div id="pvt_container" class="pvt_container"><div  id="pres-v-tourism" class="pres-v-tourism"></div></div>
   	<div id="pve_container" class="pve_container"><div  id="pres-v-extractive" class="pres-v-extractive"></div></div>
