--- a/templates/overview.mustache
+++ b/templates/overview.mustache
@@ -24,8 +24,9 @@
     </table>
  </div>
    <div class="reportSection">
-    <h4>Lobster Catch</h4>
-    <p class="large">The selected proposal contains <strong>{{lobster_perc}}%</strong> of 2008 the Galapagos lobster catch (by weight).</p>
+    <h4>Captura de Langosta</h4>
+    <p class="large">
+      La propuesta contiene <strong>{{lobster_perc}}%</strong> de la captura de langosta (por peso) del 2008.</p>
   </div>
 {{/isCollection}}
 {{^isCollection}}
@@ -34,7 +35,7 @@
 	  <p class="large">El área seleccionada se encuentra a <strong>{{size_km}} kilómetros cuadrados</strong>.</p>
 	</div>
   <div class="reportSection">
-    <h4>Lobster Catch</h4>
-    <p class="large">The selected sketch contains <strong>{{lobster_perc}}%</strong> of the 2008 Galapagos lobster catch (by weight).</p>
+    <h4>Captura de Langosta</h4>
+    <p class="large">El área seleccionada se encuentra a <strong>{{lobster_perc}}%</strong> de la captura de langosta (por peso) del 2008.</p>
   </div>
 {{/isCollection}}
