fixed gal lobster msg

--- a/templates/overview.mustache
+++ b/templates/overview.mustache
@@ -26,7 +26,7 @@
    <div class="reportSection">
     <h4>Captura de Langosta</h4>
     <p class="large">
-      La propuesta contiene <strong>{{lobster_perc}}%</strong> de la captura de langosta (por peso) del 2008.</p>
+      La propuesta contiene <strong>{{lobster_perc}}%</strong> de la captura de langosta (por peso).</p>
   </div>
 {{/isCollection}}
 {{^isCollection}}
@@ -36,6 +36,6 @@
 	</div>
   <div class="reportSection">
     <h4>Captura de Langosta</h4>
-    <p class="large">El área seleccionada se encuentra a <strong>{{lobster_perc}}%</strong> de la captura de langosta (por peso) del 2008.</p>
+    <p class="large">El área seleccionada se encuentra a <strong>{{lobster_perc}}%</strong> de la captura de langosta (por peso).</p>
   </div>
 {{/isCollection}}
